-
Bug
-
Resolution: Done
-
P1: Critical
-
5.1.0 Beta 1
-
None
-
Windows 8
-
de3d449dcff4ee00fea72b3697055f5459fb13ec (5.1 MSVC32 bit, gcc 32/64bit), additional fix for 64 bit MSVC 671d6075127bf7cb2d6c1c7ae539c266a320604e (5.1.1), command line option to switch: 560de9725da348e2810c700dda6b25a668e8bd58 (5.2), 5.3 : see comments
- is required for
-
QTBUG-36712 Issues to be fixed before 5.3.0 Beta 1 release
-
- Closed
-
-
QTBUG-31105 Qt 5.1 RC1 release tasks
-
- Closed
-
- relates to
-
QTBUG-32946 Windows 8: When touching a mouse area in Qt Quick 2 then it will get two clicked events when a touch screen is involved
-
- Closed
-
-
QTBUG-29946 Windows8, x86 tablet (Acer w501) and touch screen
-
- Closed
-
-
QTBUG-39353 The QT5.3 QML Does NOT responding my electromagnetic pen
-
- Closed
-
| For Gerrit Dashboard: QTBUG-31386 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 57289,1 | Windows: Suppress mouse events synthesized by OS. | release | qt/qtbase | Status: MERGED | +2 | 0 |
| 60307,1 | Windows: Fix detection of synthesized mouse events for MSVC / 64bit. | release | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 60308,1 | Windows: Fix detection of synthesized mouse events for MSVC / 64bit. | stable | qt/qtbase | Status: MERGED | +2 | 0 |
| 64800,1 | Windows: Add command line parameter enabling OS-synthesized mouse events from touch. | dev | qt/qtbase | Status: MERGED | +2 | 0 |