Windows: Fix detection of synthesized mouse events for MSVC / 64bit.

For some reason, the enumeration values were signed when using
64bit.

Task-number: QTBUG-31386
Change-Id: I891dbe1a82dc2aefbe13a131c72c01a57f981767
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: 671d6075127bf7cb2d6c1c7ae539c266a320604e https://github.com/qt/qtbase/commit/671d6075127bf7cb2d6c1c7ae539c266a320604e